src/assets/base.scss
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  font-weight: normal;
  font-family: PPNeueMontreal;
}

/* Root Colors */
$white: #ffffff;
$white100: #f5f5f5;

$black: #181818;

/* Semantic Colors */
$background-primary: $white100;
$background-secondary: $white;

$text-01: $black;
$text-blend: $background-primary;

html {
  background-color: $background-primary;
}

/* Typography */
@font-face {
  font-family: 'PPNeueMontreal';
  src: url('/fonts/PPNeueMontreal/PPNeueMontreal-Regular.woff2') format('woff2');
  font-display: swap;
}

body {
  font-family: 'PPNeueMontreal', sans-serif;
}

$font-family: 'PPNeueMontreal';

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 120%;
  color: $text-01;
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 1.75rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.25rem;
}

h5 {
  font-size: 1rem;
}

h6 {
  font-size: 0.875rem;
}

p {
  font-size: 0.875rem;
  line-height: 130%;
  color: $text-01;
}

a {
  font-size: 0.875rem;
  color: $text-01;
  text-decoration: none;
}

span {
  font-size: 0.875rem;
  color: $text-01;
  letter-spacing: 1%;
}

button {
  font-family: $font-family;
  font-size: 0.875rem;
}

.nav-text {
  font-size: 0.875rem;
  color: $text-blend;
  text-decoration: none;
  font-weight: 400;
}

.nav-link {
  font-size: 0.875rem;
  color: $text-blend;
  text-decoration: none;
}

/* Spacing */
$spacing-xxs: 0.25rem;
$spacing-xs: 0.5rem;
$spacing-sm: 0.75rem;
$spacing-md: 1rem;
$spacing-lg: 1.25rem;
$spacing-xl: 1.5rem;
$spacing-xxl: 2rem;
$spacing-3xl: 2.5rem;
$spacing-4xl: 3rem;
$spacing-5xl: 4rem;
$spacing-6xl: 5rem;

/* Layout */
$grid-cells: 6;
$grid-item-size: 1fr;

/* Breakpoints */
$breakpoint-sm: 576px;
$breakpoint-md: 768px;
$breakpoint-lg: 992px;
$breakpoint-xl: 1200px;

